force-app/main/default/objects/Production__c/fields/Production_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Start_Date__c</fullName>
    <label>Production Start Date</label>
    <type>Date</type>
</CustomField>