force-app/main/default/objects/Production__c/fields/Release_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Release_Countdown__c</fullName>
    <formula>Release_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>