force-app/main/default/objects/Production__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Summarize the plot of the movie</description>
    <inlineHelpText>Summarize the plot of the movie</inlineHelpText>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>